adição do docker, typeORM e integração com o banco de dados
